// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidepanelContent should render SidepanelContent 1`] = `
.c0 {
  position: relative;
  margin-left: 0px;
  max-width: none;
  min-width: none;
  box-sizing: border-box;
  height: auto;
  min-height: auto;
  z-index: initial;
  -webkit-transition: 300ms cubic-bezier(.62,.28,.23,.99);
  transition: 300ms cubic-bezier(.62,.28,.23,.99);
}

.c0 > .{
  box-sizing: border-box;
  margin-top: auto;
  margin-bottom: auto;
  margin-left: inherit;
  margin-right: inherit;
  max-width: auto;
  text-align: inherit;
  height: auto;
  -webkit-transition: 300ms cubic-bezier(.62,.28,.23,.99);
  transition: 300ms cubic-bezier(.62,.28,.23,.99);
  padding-top: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
  padding-right: 24px;
}

.c1 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .{
  width: 100%;
  height: 100%;
  margin-top: initial;
  margin-bottom: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
}

<body>
  <div>
    <div
      class="c0 c1"
    >
      <div
        class=""
      />
    </div>
  </div>
</body>
`;

exports[`SidepanelContent should render SidepanelContent docked left 1`] = `
<body>
  .c0 {
  position: relative;
  margin-left: 0px;
  max-width: none;
  min-width: none;
  box-sizing: border-box;
  height: auto;
  min-height: auto;
  z-index: initial;
  -webkit-transition: 300ms cubic-bezier(.62,.28,.23,.99);
  transition: 300ms cubic-bezier(.62,.28,.23,.99);
}

.c0 > .{
  box-sizing: border-box;
  margin-top: auto;
  margin-bottom: auto;
  margin-left: inherit;
  margin-right: inherit;
  max-width: auto;
  text-align: inherit;
  height: auto;
  -webkit-transition: 300ms cubic-bezier(.62,.28,.23,.99);
  transition: 300ms cubic-bezier(.62,.28,.23,.99);
  padding-top: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
  padding-right: 24px;
}

.c1 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: -50%;
}

.c1 .{
  width: 100%;
  height: 100%;
  margin-top: initial;
  margin-bottom: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
}

<div>
    <div
      class="c0 c1"
    >
      <div
        class=""
      />
    </div>
  </div>
</body>
`;

exports[`SidepanelContent should render SidepanelContent docked right 1`] = `
<body>
  .c0 {
  position: relative;
  margin-left: 0px;
  max-width: none;
  min-width: none;
  box-sizing: border-box;
  height: auto;
  min-height: auto;
  z-index: initial;
  -webkit-transition: 300ms cubic-bezier(.62,.28,.23,.99);
  transition: 300ms cubic-bezier(.62,.28,.23,.99);
}

.c0 > .{
  box-sizing: border-box;
  margin-top: auto;
  margin-bottom: auto;
  margin-left: inherit;
  margin-right: inherit;
  max-width: auto;
  text-align: inherit;
  height: auto;
  -webkit-transition: 300ms cubic-bezier(.62,.28,.23,.99);
  transition: 300ms cubic-bezier(.62,.28,.23,.99);
  padding-top: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
  padding-right: 24px;
}

.c1 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  right: -50%;
}

.c1 .{
  width: 100%;
  height: 100%;
  margin-top: initial;
  margin-bottom: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
}

<div>
    <div
      class="c0 c1"
    >
      <div
        class=""
      />
    </div>
  </div>
</body>
`;
